--- a/CSS/CSS-TelaCadastro.css
+++ b/CSS/CSS-TelaCadastro.css
@@ -1,97 +1,18 @@
-.divCadastro{
-    transition: all linear 0.5s;
-    position: fixed;
-    z-index: -1;
-    top: 1%;
-    left: 200%;
-    width: 40%;
-    height: 98%;
-    border-radius: 5%;
-    background-image: linear-gradient(to right, #fdfbf5d2, #fdfbf5ec, #fdfbf5,  #fdfbf5, #fdfbf5ec, #fdfbf5d2);
-    box-shadow: 0.1em 0.1em 0.2em #fdfbf5;
-    opacity: 100%;
+.divSeparadorCadastro{
+    position: relative;
+    top: 22.5%;
+    left: 50%;
+    width: 0.05%;
+    height: 50%;
+    border: solid;
+    border-top-left-radius: 15pc;
+    border-top-right-radius: 15pc;
+    border-bottom-left-radius: 15pc;
+    border-bottom-right-radius: 15pc;
+    border-color: black;
+    border-width: 1px;
+    background-color: black;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.btAvancarCadastro{
-    transition: all linear 0.5s;
-    width: 10%;
-    height: 2%;
-    top: 83%;
-    left: 38%;
-    position: absolute;
-    text-align: center;
-    border-radius: 3%;
-    font-size: 175%;  
-    cursor: pointer;		  
-}
-
-.btAvancarCadastro:hover{
-    width: 10%;
-    height: 2%;
-    position: absolute;
-    text-align: center;
-    border-radius: 3%;
-    font-size: 175%;  
-    cursor: pointer;	
-    text-shadow: 0.1em 0.1em 0.2em #87CEFA;	  
-}
-
-
-.btVoltarCadastro{
-    transition: all linear 0.5s;
-    width: 65%;
-    height: 5%;
-    top: 93%;
-    left: 15%;
-    border-color: transparent;
-    background-color: transparent;
-    position: absolute;
-    text-align: center;
-    border-radius: 3%;
-    font-size: 80%;  
-    cursor: pointer;
-    color: rgb(0, 247, 255);
-}
-
-.btVoltarCadastro:hover{
-    width: 65%;
-    height: 5%;
-    left: 15%;
-    border-color: transparent;
-    background-color: transparent;
-    position: absolute;
-    text-align: center;
-    border-radius: 3%;
-    font-size: 80%;  
-    cursor: pointer;	
-    text-shadow: 0.1em 0.1em 0.2em #1a73aab0;	  
-}
-
-
-
-
 
 
 
@@ -116,9 +37,9 @@
 .tbUsuarioNovoCadastro{
     transition: all linear 0.5s;
     top: 20%;
-    left: 20%;
+    left: 18%;
     height: 7%;
-    width: 60%;
+    width: 22%;
     border-radius: 5%;
     background-color: transparent;
     border-color: transparent;
@@ -126,6 +47,7 @@
     font-size: 100%;
     text-align: center;
     position: absolute;
+    font-family: American Typewriter, serif;
 }
 
 .tbUsuarioNovoCadastro:focus{
@@ -137,9 +59,9 @@
 .tbEmailNovoCadastro{
     transition: all linear 0.5s;
     top: 30%;
-    left: 20%;
+    left: 18%;
     height: 7%;
-    width: 60%;
+    width: 22%;
     border-radius: 5%;
     background-color: transparent;
     border-color: transparent;
@@ -147,6 +69,7 @@
     font-size: 100%;
     text-align: center;
     position: absolute;
+    font-family: American Typewriter, serif;
 }
 
 .tbEmailNovoCadastro:focus{
@@ -158,9 +81,9 @@
 .tbSenhaNovoCadastro{
     transition: all linear 0.5s;
     top: 40%;
-    left: 50%;
+    left: 30.5%;
     height: 7%;
-    width: 30%;
+    width: 10%;
     border-radius: 5%;
     background-color: transparent;
     border-color: transparent;
@@ -168,6 +91,7 @@
     font-size: 100%;
     text-align: center;
     position: absolute;
+    font-family: American Typewriter, serif;
 }
 
 .tbSenhaNovoCadastro:focus{
@@ -179,9 +103,9 @@
 .tbConfirmSenhaNovoCadastro{
     transition: all linear 0.5s;
     top: 50%;
-    left: 50%;
+    left: 30.5%;
     height: 7%;
-    width: 30%;
+    width: 10%;
     border-radius: 5%;
     background-color: transparent;
     border-color: transparent;
@@ -189,6 +113,7 @@
     font-size: 100%;
     text-align: center;
     position: absolute;
+    font-family: American Typewriter, serif;
 }
 
 .tbConfirmSenhaNovoCadastro:focus{
@@ -200,9 +125,9 @@
 .tbIdadeNovoCadastro{
     transition: all linear 0.5s;
     top: 60%;
-    left: 50%;
+    left: 30.5%;
     height: 7%;
-    width: 30%;
+    width: 10%;
     border-radius: 5%;
     background-color: transparent;
     border-color: transparent;
@@ -210,6 +135,7 @@
     font-size: 100%;
     text-align: center;
     position: absolute;
+    font-family: American Typewriter, serif;
 }
 
 .tbIdadeNovoCadastro:focus{
@@ -221,9 +147,9 @@
 .tbSexoNovoCadastro{
     transition: all linear 0.5s;
     top: 70%;
-    left: 50%;
+    left: 30.5%;
     height: 7%;
-    width: 30%;
+    width: 10%;
     border-radius: 5%;
     background-color: transparent;
     border-color: transparent;
@@ -231,6 +157,7 @@
     font-size: 100%;
     text-align: center;
     position: absolute;
+    font-family: American Typewriter, serif;
 }
 
 .tbSexoNovoCadastro:focus{
@@ -267,9 +194,9 @@
 .txSenhaCadastro{
     transition: all linear 0.5s;
     top: 38%;
-    left: 11%;
+    left: 15%;
     height: 7%;
-    width: 30%;
+    width: 10%;
     border-radius: 5%;
     background-color: transparent;
     border-color: transparent;
@@ -277,14 +204,15 @@
     font-size: 120%;
     text-align: center;
     position: absolute;
+    font-family: American Typewriter, serif;
 }
 
 .txConfirmSenhaCadastro{
     transition: all linear 0.5s;
     top: 49%;
-    left: 18%;
+    left: 15%;
     height: 7%;
-    width: 30%;
+    width: 15%;
     border-radius: 5%;
     background-color: transparent;
     border-color: transparent;
@@ -292,14 +220,15 @@
     font-size: 120%;
     text-align: center;
     position: absolute;
+    font-family: American Typewriter, serif;
 }
 
 .txIdadeCadastro{
     transition: all linear 0.5s;
     top: 60%;
-    left: 18.3%;
+    left: 15%;
     height: 7%;
-    width: 13%;
+    width: 10%;
     border-radius: 5%;
     background-color: transparent;
     border-color: transparent;
@@ -307,14 +236,15 @@
     font-size: 120%;
     text-align: center;
     position: absolute;
+    font-family: American Typewriter, serif;
 }
 
 .txSexoCadastro{
     transition: all linear 0.5s;
     top: 70%;
-    left: 18.3%;
+    left: 15%;
     height: 7%;
-    width: 13%;
+    width: 10%;
     border-radius: 5%;
     background-color: transparent;
     border-color: transparent;
@@ -322,109 +252,5 @@
     font-size: 120%;
     text-align: center;
     position: absolute;
+    font-family: American Typewriter, serif;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.txMaisCadastro{
-    transition: all linear 0.5s;
-    top: -4.5%;
-    left: 21%;
-    height: 7%;
-    width: 10%;
-    border-radius: 5%;
-    background-color: transparent;
-    border-color: transparent;
-    color: rgb(0, 247, 255);
-    font-size: 500%;
-    text-align: center;
-    position: absolute;
-}
-
-.txPlusCadastro{
-    transition: all linear 0.5s;
-    top: 2%;
-    left: 30%;
-    height: 7%;
-    width: 10%;
-    border-radius: 5%;
-    background-color: transparent;
-    border-color: transparent;
-    color: rgb(0, 247, 255);
-    font-size: 300%;
-    text-align: center;
-    position: absolute;
-}
-
-.txFriendsCadastro{
-    transition: all linear 0.5s;
-    top: 2%;
-    left: 50%;
-    height: 7%;
-    width: 10%;
-    border-radius: 5%;
-    background-color: transparent;
-    border-color: transparent;
-    color: black;
-    font-size: 300%;
-    text-align: center;
-    position: absolute;
-}
-
