--- a/CSS/CSS-TelaContinuaCadastro.css
+++ b/CSS/CSS-TelaContinuaCadastro.css
@@ -12,6 +12,63 @@
     opacity: 0%;
 }
 
+.divSeparadorContinuaCadastro{
+    position: relative;
+    top: 22.5%;
+    left: 50%;
+    width: 0.05%;
+    height: 50%;
+    border: solid;
+    border-top-left-radius: 15pc;
+    border-top-right-radius: 15pc;
+    border-bottom-left-radius: 15pc;
+    border-bottom-right-radius: 15pc;
+    border-color: white;
+    border-width: 1px;
+    background-color: white;
+}
+
+
+
+
+
+
+
+
+
+
+
+.imgCarregada{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    left: 0%;
+    top: 0%;
+}
+
+.imgCarregada2{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    left: 0%;
+    top: 0%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -21,8 +78,8 @@
 .imgFRGFrente{
     position: absolute;
     top: 55%;
-    left: 20%;
-    width: 20%;
+    left: 58%;
+    width: 10%;
     height: 20%;
     background-color: rgb(236, 236, 236);
     z-index: 1;
@@ -36,8 +93,8 @@
 .imgFRGCosta{
     position: absolute;
     top: 55%;
-    left: 60%;
-    width: 20%;
+    left: 73%;
+    width: 10%;
     height: 20%;
     background-color: rgb(236, 236, 236);
     z-index: 1;
@@ -70,8 +127,8 @@
 .FRGFrente{
     position: absolute;
     top: 55%;
-    left: 20%;
-    width: 20%;
+    left: 58%;
+    width: 10%;
     height: 20%;
     background-color: black;
     opacity: 100%;
@@ -84,62 +141,15 @@
 .FRGCosta{
     position: absolute;
     top: 55%;
-    left: 60%;
-    width: 20%;
+    left: 73%;
+    width: 10%;
     height: 20%;
     border: solid;
     background-color: black;
+    cursor: pointer;
+    z-index: 2;
     opacity: 0%;
 
-}
-
-
-.btConcluirCadastro{
-    transition: all linear 0.5s;
-    width: 80%;
-    height: 2%;
-    top: 83%;
-    left: 10%;
-    position: absolute;
-    text-align: center;
-    border-radius: 3%;
-    font-size: 175%;  
-    cursor: pointer;		  
-}
-
-.btConcluirCadastro:hover{	
-    text-shadow: 0.1em 0.1em 0.2em #87CEFA;	  
-}
-
-
-.btVoltarCadastro2{
-    transition: all linear 0.5s;
-    width: 65%;
-    height: 5%;
-    top: 93%;
-    left: 15%;
-    border-color: transparent;
-    background-color: transparent;
-    position: absolute;
-    text-align: center;
-    border-radius: 3%;
-    font-size: 80%;  
-    cursor: pointer;
-    color: rgb(0, 247, 255);
-}
-
-.btVoltarCadastro2:hover{
-    width: 65%;
-    height: 5%;
-    left: 15%;
-    border-color: transparent;
-    background-color: transparent;
-    position: absolute;
-    text-align: center;
-    border-radius: 3%;
-    font-size: 80%;  
-    cursor: pointer;	
-    text-shadow: 0.1em 0.1em 0.2em #1a73aab0;	  
 }
 
 
@@ -169,16 +179,18 @@
 .tbNomeNovoCadastro{
     transition: all linear 0.5s;
     top: 20%;
-    left: 20%;
+    left: 60%;
     height: 7%;
-    width: 60%;
+    width: 22%;
     border-radius: 5%;
     background-color: transparent;
     border-color: transparent;
-    border-bottom-color: black;
+    border-bottom-color: white;
+    color: white;
     font-size: 100%;
     text-align: center;
     position: absolute;
+    font-family: American Typewriter, serif;
 }
 
 .tbNomeNovoCadastro:focus{
@@ -190,16 +202,18 @@
 .tbSobrenomeNovoCadastro{
     transition: all linear 0.5s;
     top: 30%;
-    left: 20%;
+    left: 60%;
     height: 7%;
-    width: 60%;
+    width: 22%;
     border-radius: 5%;
     background-color: transparent;
     border-color: transparent;
-    border-bottom-color: black;
+    border-bottom-color: white;
+    color: white;
     font-size: 100%;
     text-align: center;
     position: absolute;
+    font-family: American Typewriter, serif;
 }
 
 .tbSobrenomeNovoCadastro:focus{
@@ -211,16 +225,18 @@
 .tbCPFNovoCadastro{
     transition: all linear 0.5s;
     top: 40%;
-    left: 50%;
+    left: 60%;
     height: 7%;
-    width: 30%;
+    width: 22%;
     border-radius: 5%;
     background-color: transparent;
     border-color: transparent;
-    border-bottom-color: black;
+    border-bottom-color: white;
+    color: white;
     font-size: 100%;
     text-align: center;
     position: absolute;
+    font-family: American Typewriter, serif;
 }
 
 .tbCPFNovoCadastro:focus{
@@ -256,147 +272,50 @@
 
 .txCPFCadastro{
     transition: all linear 0.5s;
-    top: 40%;
-    left: 11%;
+    top: 39%;
+    left: 57%;
     height: 7%;
-    width: 30%;
+    width: 10%;
     border-radius: 5%;
     background-color: transparent;
     border-color: transparent;
-    color: black;
+    color: white;
     font-size: 120%;
     text-align: center;
     position: absolute;
+    font-family: American Typewriter, serif;
 }
 
 .txRGFrenteCadastro{
     transition: all linear 0.5s;
     top: 75%;
-    left: 15%;
+    left: 58%;
     height: 7%;
-    width: 30%;
+    width: 10%;
     border-radius: 5%;
     background-color: transparent;
     border-color: transparent;
-    color: black;
-    font-size: 100%;
+    color: white;
+    font-size: 120%;
     text-align: center;
     position: absolute;
+    font-family: American Typewriter, serif;
 }
 
 .txRGTrasCadastro{
     transition: all linear 0.5s;
     top: 75%;
-    left: 56%;
-    height: 7%;
-    width: 30%;
-    border-radius: 5%;
-    background-color: transparent;
-    border-color: transparent;
-    color: black;
-    font-size: 100%;
-    text-align: center;
-    position: absolute;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.txMaisContinuaCadastro{
-    transition: all linear 0.5s;
-    top: -4.5%;
-    left: 25%;
+    left: 73%;
     height: 7%;
     width: 10%;
     border-radius: 5%;
     background-color: transparent;
     border-color: transparent;
-    color: rgb(0, 247, 255);
-    font-size: 500%;
+    color: white;
+    font-size: 120%;
     text-align: center;
     position: absolute;
+    font-family: American Typewriter, serif;
 }
 
-.txPlusContinuaCadastro{
-    transition: all linear 0.5s;
-    top: 2%;
-    left: 35%;
-    height: 7%;
-    width: 10%;
-    border-radius: 5%;
-    background-color: transparent;
-    border-color: transparent;
-    color: rgb(0, 247, 255);
-    font-size: 300%;
-    text-align: center;
-    position: absolute;
-}
-
-.txFriendsContinuaCadastro{
-    transition: all linear 0.5s;
-    top: 2%;
-    left: 55%;
-    height: 7%;
-    width: 10%;
-    border-radius: 5%;
-    background-color: transparent;
-    border-color: transparent;
-    color: black;
-    font-size: 300%;
-    text-align: center;
-    position: absolute;
-}
 
